Properly grab data from YouTube

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="compiled/src/components/Nav.js"></script>
   <script src="compiled/src/components/Search.js"></script>
   <script src="compiled/src/components/App.js"></script>
+  <script src="compiled/src/lib/searchYouTube.js"></script>
   <script src="compiled/src/index.js"></script>
 </body>
 </html>
